# Wand-Enhancer

./: AGENTS.md  CHANGELOG.md  README.md  build.ps1
.github/workflows/: build.yml  mirror.yml  validate-release-metadata.yml
WandEnhancer/Core/: Enhancer.cs  EnhancerConfig.cs
WandEnhancer/Properties/: AssemblyInfo.cs
WandEnhancer/View/MainWindow/: MainWindowVm.cs
tools/asar-fuses-bypass/: CMakeLists.txt
web-panel/: package.json
web-panel/bridge/scripts/default/: remote-popup-cleanup.js
web-panel/bridge/scripts/default/installed-apps-sync/: remote-commands.js
web-panel/bridge/scripts/default/remote-popup-cleanup/: qr-renderer.js
web-panel/bridge/src/: bridge-state.ts  constants.ts  renderer-scripts.test.ts  runtime.integration.test.ts  server.ts  websocket-codec.ts
web-panel/bridge/src/normalizers/: index.ts
web-panel/bridge/src/wand/: runtime.ts  trainer-localization.test.ts  trainer-localization.ts
web-panel/protocol/: messages.ts  web-contract.json
web-panel/src/remote-session/: remote-session.client.ts  remote-session.urls.ts  use-remote-session.ts
web-panel/src/shared/: storage.test.ts  storage.ts
web-panel/src/trainer/presets/: preset-storage.ts  use-presets.ts
web-panel/src/trainer/ui/: QuickActions.tsx
